--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -24,6 +24,10 @@
     font-family: 'Poppins', 'Roboto', sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: var(--primary-color-1);
 }
